[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = "1.0.156"
mongodb = "2.3.0"
tokio = "1"
argon2 = "0.5.0"
once_cell = "1.17.1"
num_cpus = "1.15.0"
hex = "0.4.3"
futures = "0.3.28"
serde_json = "1.0.96"
sha256 = "1.1.3"
